--- a/pom.xml
+++ b/pom.xml
@@ -211,6 +211,14 @@
 			<artifactId>spring-cloud-context</artifactId>
 			<version>2.1.1.RELEASE</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${commons-lang3.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
